# fastApi-celery_redis

./: main.py  pyproject.toml
celery_tasks/: posts.py  send_email.py
config/: celery_utils.py  db.py
